[gd_scene load_steps=5 format=3 uid="uid://hd2gw3dbfl3c"]

[ext_resource type="Theme" uid="uid://cvevndji4t07j" path="res://scenes/ui/game_ui_theme.tres" id="1_3wy81"]
[ext_resource type="Texture2D" uid="uid://bhntucgr6ee15" path="res://assets/game/Objects/Basic_Plants.png" id="2_olx0l"]
[ext_resource type="Script" uid="uid://blfe15rxgp3ym" path="res://scenes/ui/shop_ui_component.gd" id="2_t8w2o"]

[sub_resource type="AtlasTexture" id="AtlasTexture_t8w2o"]
atlas = ExtResource("2_olx0l")
region = Rect2(2, 2, 12, 13)

[node name="ShopUiComponent" type="PanelContainer"]
z_index = 3
custom_minimum_size = Vector2(100, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -79.5
offset_right = 50.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
theme = ExtResource("1_3wy81")
script = ExtResource("2_t8w2o")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(40, 40)
layout_mode = 2
size_flags_horizontal = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_t8w2o")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/line_spacing = 0
theme_override_font_sizes/font_size = 12
text = "Rice Seed
â‚± 20"
horizontal_alignment = 1

[node name="TextEdit" type="LineEdit" parent="MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2
theme_override_font_sizes/font_size = 12
placeholder_text = "How Many?"
alignment = 1
max_length = 2
emoji_menu_enabled = false
caret_blink = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 15
alignment = 1

[node name="confirm" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme = ExtResource("1_3wy81")
theme_type_variation = &"checkButton"

[node name="cancel" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2
theme = ExtResource("1_3wy81")
theme_type_variation = &"cancelButton"

[connection signal="text_changed" from="MarginContainer/VBoxContainer/TextEdit" to="." method="_on_text_edit_text_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/cancel" to="." method="_on_cancel_pressed"]
